--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,15 +8,17 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.MyApp">
-        <activity android:name=".view.activity.StudentListActivity">
+            android:theme="@style/Theme.MyApp"
+            android:name=".StudentListApplication"
+            android:fullBackupContent="@xml/backup_descriptor">
+        <activity android:name=".ui.activity.StudentListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".view.activity.StudentFormActivity"/>
+        <activity android:name=".ui.activity.StudentFormActivity"/>
     </application>
 
 </manifest>
